2001-04-30  Martin Buchholz  <martin@xemacs.org>

	Make string hashing more efficient.
	Makes intern much faster.
	Makes hash tables containing strings faster.
	* symbols.c (hash_string): A much better hash function.
	Change prototype to return unsigned value.
	(init_symbols_once_early): Use unsigned type for hash value.
	(oblookup): Use unsigned type for hash value.

2001-04-04  Martin Buchholz  <martin@xemacs.org>

	* keymap.c (Fmap_keymap): Revert to previous implementation, since
	elisp_maphash is now safe.

	* elhash.c: Remove erroneously added comment.
	* elhash.c (copy_compress_hentries): New.
	(Fmaphash): Use copy_compress_hentries.
	(elisp_maphash): Use copy_compress_hentries.
	(elisp_map_remhash): Use copy_compress_hentries.
	(elisp_maphash_unsafe): New.
	* elhash.h: Add prototype for elisp_maphash_unsafe.

	* elhash.c (Fmaphash):
	Avoid crashes/unpredictable behavior if a hash table is modified
	during a mapping function, perhaps indirectly via gc.
	(free_hentries): New.
	Avoid crash if a pdumped hash table is collected.
	(maphash_unwind): New.

	* tests.c: Add C-level hash table tests.

2001-04-28  Ben Wing  <ben@xemacs.org>

	* buffer.c (Ferase_buffer):
	* editfns.c (buffer_insert1):
	* editfns.c (Finsert_before_markers):
	* editfns.c (Finsert_string):
	* editfns.c (Finsert_char):
	* editfns.c (Fdelete_region):
	* editfns.c (Fwiden):
	* editfns.c (Fnarrow_to_region):
	remove bogus lines setting zmacs_region_stays to 0.
	
	* scrollbar-msw.c (mswindows_handle_mousewheel_event):
	remove debug lines.

2001-03-08  Mike Alexander  <mta@arbortext.com>

	* event-msw.c (mswindows_need_event_in_modal_loop):
	Don't dispatch a message if we didn't get one.
	(mswindows_need_event):
	Terminate the correct process when one exits instead of the first
	one on Vprocess_list and look for process termination when in
	mswindows_protect_modal_loop.

2001-04-20  Ben Wing  <ben@xemacs.org>

	* .cvsignore: Added stuff for Windows.

2001-04-15  Ben Wing  <ben@xemacs.org>
